--- a/templates/general/generalIndex.html
+++ b/templates/general/generalIndex.html
@@ -1,5 +1,5 @@
 {% extends 'general/BaseGeneral.html' %}
 
 {% block content %}
-  <h1 class="text-center text-white mt-4">Bienvenido a la Escuela de Pichara Poker</h1>
+  <h1 class="title is-1 has-text-centered has-text-white">Bienvenido a la Escuela de Pichara Poker</h1>
 {% endblock %}
