--- a/templates/admin/adminIndex.html
+++ b/templates/admin/adminIndex.html
@@ -1,6 +1,10 @@
 {% extends 'admin/BaseAdmin.html' %}
 
 {% block content %}
+<h1 class="title is-1"> adminIndex</h1>
+    {% include 'index2.html' %}
+{% endblock %}
+<!--
     <div class="row mt-4">
         <div class="col-1">
             {% include  'singleMoves.html' with view='index' %}
@@ -19,4 +23,4 @@
             {% include  'table.html' with view='index' %}
         </div>
     </div>
-{% endblock %}
+-->
