--- a/templates/admin/adminModClient.html
+++ b/templates/admin/adminModClient.html
@@ -2,22 +2,26 @@
 {% load static %}
 {% load pages_extras %}
 {% block content %}
-    <div class="row mt-4">
-        <div class="col-3">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                <a class="nav-link text-white" href="{% url 'admin_principal' %}">Jugadas</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-white" href="{% url 'profiles_list' %}">Perfiles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'all_clients' %}">Clientes</a>
-                </li>
-            </ul>
+    <div class="columns">
+        <div class="column">
+            <div class="tabs is-centered is-boxed">
+                <ul>
+                    <li>
+                        <a class="navbar-item has-text-info" href="{% url 'admin_principal' %}">Jugadas</a>
+                    </li>
+                    <li>
+                        <a class="navbar-item has-text-info" href="{% url 'profiles_list' %}">Perfiles de jugadas</a>
+                    </li>
+                    <li class="is-active">
+                        <a class="navbar-item has-text-info" href="{% url 'all_clients' %}">Clientes</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-    <h1 class="text-center text-white">{{client}}</h1>
+    
+
+    <h1 class="title has-text-white has-text-centered">{{client.name}}</h1>
     <a type="button" class="btn btn-sm btn-secondary" href="{% url 'all_clients' %}">Volver</a>
     <div class="row">    
         <div class="col-6">
