--- a/templates/admin/adminProfilesList.html
+++ b/templates/admin/adminProfilesList.html
@@ -2,98 +2,142 @@
 {% load static %}
 
 {% block content %}
-    <div class="row mt-4">
-        <div class="col-3">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                <a class="nav-link text-white" href="{% url 'admin_principal' %}">Jugadas</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active" href="{% url 'profiles_list' %}">Perfiles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="{% url 'all_clients' %}">Clientes</a>
-                </li>
-            </ul>
+    <div class="columns">
+        <div class="column">
+            <div class="tabs is-centered is-boxed">
+                <ul>
+                    <li>
+                        <a class="navbar-item has-text-info" href="{% url 'admin_principal' %}">Jugadas</a>
+                    </li>
+                    <li class="is-active">
+                        <a class="navbar-item has-text-info" href="{% url 'profiles_list' %}">Perfiles de jugadas</a>
+                    </li>
+                    <li>
+                        <a class="navbar-item has-text-info" href="{% url 'all_clients' %}">Clientes</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
-    <div class="row mt-4">
-        <div class="col-2"></div>
-
-        <div class="col-8">
-            <h4 class="text-light text-center">Perfiles</h4>
-            <button type="button" class="btn btn-sm btn-primary mb-2" data-toggle="modal" data-target="#staticBackdrop">Nuevo Perfil</button>
+    <div class="columns">
+        <div class="column is-one-fifth"></div>
+        <div class="column is-three-fifths">
+            <h4 class="title has-text-centered has-text-white" style="margin-top: 10px;">Perfiles</h4>
+            <button class="button is-link is-small modal-button" data-target="modalNew" style="margin-bottom: 10px;">Nuevo Perfil</button>
             {% if profiles %}
-            <div class="table table-responsive">
-                <table class="table table-dark table-striped table-bordered" style="border: 1px solid black;">
+                <table class="table table-dark is-fullwidth is-bordered" style="background-color: #343a40;;">
                     <thead>
                         <tr>
-                            <td class="text-center">Nombre</td>
-                            <td class="text-center" colspan="3">Opciones</td>
+                            <td class="has-text-white has-text-centered" style="border: 1px solid black;">Nombre</td>
+                            <td class="has-text-white has-text-centered" style="border: 1px solid black;" colspan="3">Opciones</td>
                         </tr>
                     </thead>
                     <tbody>
                         {% for profile in profiles %}
                         <tr>
-                            <td>{{profile}}</td>
-                            <td class="text-center"><a type="button" href="" class="btn btn-sm btn-primary">Ver Perfil</a></td>
-                            <td class="text-center"><a type="button" href="{% url 'admin_profile' profile.id %}" class="btn btn-sm btn-success">Modificar</a></td>
-                            <td class="text-center"><a type="button" href="{% url 'delete_profile' profile.id %}" class="btn btn-sm btn-danger">Eliminar</a></td>
+                            <td class="has-text-white has-text-centered" style="border: 1px solid black;">
+                                {{profile}}
+                            </td>
+                            <td class="text-center has-text-centered" style="border: 1px solid black;">
+                                <a type="button" href="" class="button is-small is-link">Ver Perfil</a>
+                            </td>
+                            <td class="text-center has-text-centered" style="border: 1px solid black;">
+                                <a type="button" href="{% url 'admin_profile' profile.id %}" class="button is-small is-success">Modificar</a>
+                            </td>
+                            <td class="text-center has-text-centered" style="border: 1px solid black;">
+                                <a type="button" href="{% url 'delete_profile' profile.id %}" class="button is-small is-danger">Eliminar</a>
+                            </td>
                         </tr>
                         {% endfor %}
                     </tbody>
                 </table>
-            </div>
             {% endif %}
         </div>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl" >
-        <div class="modal-content" style="background-image: url('{% static "picharapoker_bg.jpg"%}');">
-            <div class="modal-header">
-            <h5 class="modal-title text-light" id="staticBackdropLabel">Nueva Version: {{name}} Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            </div>
-            <div class="modal-body">
-                <div class="row">
+    <div class="modal" id="modalNew">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+            <header class="modal-card-head" style="background-color: #343a40;">
+              <p class="modal-card-title has-text-white">Crear nuevo perfil</p>
+              <button class="delete" aria-label="close"></button>
+            </header>
+            <section class="modal-card-body" style="background-color: #343a40;">
+                <div class="columns">
                     <div class="col-6">
-                            <label for="versionID" class="form-group text-light">Nombre Perfil</label>
-                            <input type="text" class="form-control" name="perfil" id="perfilID">
-                            <label for="descID" class="form-group text-light">Descripción del Perfil</label>
-                            <textarea class="form-control" name="description" id="descID" cols="30" rows="10"></textarea>
-                    </div>
-                    <div class="col-6">
-                        {% include  'table.html' with admin=True %}
+                        <label class="has-text-white">Nombre del Perfil de jugadas</label>
+                        <input class="input" type="text" name="perfil" id="perfilID">
+                        <label class="has-text-white" >Descripción del Perfil</label>
+                        <textarea class="textarea is-small" type="text" name="description" id="descID" cols="30" rows="10"></textarea>
                     </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-            <button type="button" class="btn btn-primary" id="saveForm">Guardar</button>
-            </div>
-        </div>
-        </div>
+            </section>
+            <footer class="modal-card-foot" style="background-color: #212121;">
+              <button class="button is-link" id="saveForm">Guardar</button>
+              <button class="button">Cancelar</button>
+            </footer>
+          </div>
     </div>
 
     <script>
         $('#saveForm').click(function(){
-            texto = '';
-            perfil =$('#perfilID')[0].value;
-            descV =  $('#descID')[0].value;
-            counter = 0
-            console.log(perfil,descV,"hola");
-
+            let texto = '';
+            let perfil =$('#perfilID')[0].value;
+            let descV =  $('#descID')[0].value;
+            let counter = 0;
             $.post("{% url 'new_profile' %}",
                     {'csrfmiddlewaretoken':'{{csrf_token}}','name':perfil,'description':descV},
                     function(response){
                         location.reload();
                     }
-                );
+            );
+        });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            // Functions to open and close a modal
+            function openModal($el) {
+                $el.classList.add('is-active');
+            }
+
+            function closeModal($el) {
+                $el.classList.remove('is-active');
+            }
+
+            function closeAllModals() {
+                (document.querySelectorAll('.modal') || []).forEach(($modal) => {
+                    closeModal($modal);
+                });
+            }
+
+            // Add a click event on buttons to open a specific modal
+            (document.querySelectorAll('.modal-button') || []).forEach(($trigger) => {
+                const modal = $trigger.dataset.target;
+                const $target = document.getElementById(modal);
+                console.log($target);
+
+                $trigger.addEventListener('click', () => {
+                    openModal($target);
+                });
+            });
+
+            // Add a click event on various child elements to close the parent modal
+            (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
+                const $target = $close.closest('.modal');
+
+                $close.addEventListener('click', () => {
+                    closeModal($target);
+                });
+            });
+
+            // Add a keyboard event to close all modals
+            document.addEventListener('keydown', (event) => {
+                const e = event || window.event;
+                if (e.keyCode === 27) { // Escape key
+                    closeAllModals();
+                }
+            });
         });
     </script>
 
